<resources>
    <string name="app_name">BoxBox</string>
    <string name="standings">Standings</string>
    <string name="races">Races</string>
    <string name="not_connected">You are not connected to the internet!</string>
    <string name="fail_message">Failed to update data from server!</string>
    <string name="fail_refresh">Failed to refresh data from server!</string>
</resources>