<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="standings_drivers">Drivers</string>
    <string name="standings_constructors">Constructors</string>
    <string name="standings_points">%s PTS</string>
    <plurals name="standings_wins">
        <item quantity="one">%s WIN</item>
        <item quantity="other">%s WINS</item>
    </plurals>
</resources>