...
        scrollBehavior = scrollBehavior,
        colors = TopAppBarDefaults.topAppBarColors(
            scrolledContainerColor = MaterialTheme.colorScheme.surface
        ),
        title = {
            Text(
                modifier = Modifier.testTag("Home AppBar Title"),
                text = stringResource(title),
                style = MaterialTheme.typography.titleLarge.copy(
                    fontFamily = FormulaOne,
                    fontWeight = FontWeight.Bold
                )
            )
...
                        .testTag("Home Offline Icon"),
                    imageVector = Icons.Default.WifiOff,
                    contentDescription = null
                )
            }
            IconButton(
                modifier = Modifier.testTag("Home Settings Button"),
                onClick = onSettingsButtonClick
            ) {
                Icon(
                    modifier = Modifier.size(30.dp),
                    imageVector = Icons.Default.Settings,
                    contentDescription = null
...
