...
                        fontWeight = FontWeight.Bold
                    )
                )
            },
            navigationIcon = {
                IconButton(
                    modifier = Modifier.testTag("Back Button"),
                    onClick = onNavigateUp
                ) {
                    Icon(
                        modifier = Modifier.size(30.dp),
                        imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                        contentDescription = null
...
@Composable
internal fun RaceResultPreview() {
    BoxBoxTheme {
        Surface(color = MaterialTheme.colorScheme.background) {
            RaceResultScreen(
                state = RaceResultsState(
                    raceName = "Bahrain",
                    results = persistentListOf(
                        RaceResult(
                            season = "2021",
                            round = 1,
                            position = 1,
                            points = 25,
...
